fix: v2.1.1 bugs and improvements (#465)
* fix: v2.1.1 bugs and improvements

* fix: field input debounce time too short

* fix: graphql error should use bdi element

* fix: pr rejects

--- a/src/common/components/grid/cell-renderer/details-expander.cell-renderer.css
+++ b/src/common/components/grid/cell-renderer/details-expander.cell-renderer.css
@@ -6,3 +6,10 @@
 .expanderIcon {
   color: var(--mdc-theme-primary);
 }
+
+/* AG-Grid bug bypass */
+/* Details row expander is duplicated inside a span tag above the actual expander icon, which blocks the events targeted to it. */
+#jobsDialog .ag-react-container > span:first-of-type {
+  display: none;
+  pointer-events: none;
+}
